# static-serve-action

./: .gitattributes  Cargo.toml  README.md  action.yml  entrypoint.sh
.github/workflows/: build-release.yml  test.yml
src/: main.rs
